# Sigma

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  frontend.html  main.py  patch.py  pyproject.toml  sample_db.json
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_user_attempts.py  003_fix_unicode_in_problems.py  004_add_lesson_explanation.py
backend/math_app/app/: auth.py  main.py
backend/math_app/core/: auth_schemas.py  database.py  models.py  models_orm.py  repository.py  security.py
backend/math_app/scripts/: init_db.py
backend/math_app/tests/: test_lessons.py
db/: sample_db.json
docs/: lessons.http
ex1_math.egg-info/: PKG-INFO  requires.txt
frontend/: Dockerfile  frontend.html  package-lock.json  package.json  styles.css
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  Navbar.tsx
frontend/src/pages/: Home.tsx  LessonDetail.tsx  Login.tsx  Signup.tsx
frontend_old/: script.js
math_app/: __init__.py  exceptions.py  models.py  repository.py
math_app/app/: __init__.py  auth.py  main.py
math_app/core/: database.py  learning_algorithms.py  models.py  models_orm.py  repository.py
math_app/tests/: __init__.py  conftest.py
scripts/: seed_lessons.py
tools/: replacements.txt
