[project]
name = "ex1-math"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "uvicorn>=0.44.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.8.1",
    "bcrypt>=4.1.0",
    "cryptography>=40.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.setuptools]
packages = ["math_app"]
